--- a/static/global.css
+++ b/static/global.css
@@ -1,4 +1,10 @@
 :root {
+  --black: #010F20;
+  --grey: #D5D9DA;
+  --white: #FDFEFF;
+  --navy: #00338C;
+  --blue: #D3F0FF;
+
   --skew-mobile: skewY(-2deg);
   --skew-desktop: skewY(-1.5deg);
 }
@@ -7,8 +13,8 @@ html {
   font-size: 16px;
   font-family: "Nunito", "Noto Sans HK", Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Helvetica Neue, sans-serif;
   line-height: 1.5;
-  color: #010F20;
-  background-color: #FDFEFF;
+  color: var(--black);
+  background-color: var(--white);
 }
 html,
 html * {
@@ -30,7 +36,7 @@ h4, h5, h6 {
 }
 a {
   text-decoration: none;
-  color: #00338C;
+  color: var(--navy);
 }
 a:focus {
   outline: none;
@@ -38,7 +44,7 @@ a:focus {
 hr {
   width: 100%;
   border: none;
-  border-top: 2px solid #00338C;
+  border-top: 2px solid var(--navy);
 }
 
 @media (max-width: 767px) {
@@ -57,7 +63,7 @@ hr {
   a:active {
     text-decoration-line: underline;
     text-decoration-style: double;
-    text-decoration-color: #D3F0FF;
+    text-decoration-color: var(--blue);
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 }
@@ -78,6 +84,6 @@ hr {
   a:hover {
     text-decoration-line: underline;
     text-decoration-style: double;
-    text-decoration-color: #D3F0FF;
+    text-decoration-color: var(--blue);
   }
 }
